--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "mazaweb",
   "private": true,
-  "homepage":"https://jalilmartinez.github.io/mazaWeb-Front/",
+  "homepage": "https://jalilmartinez.github.io/mazaWeb-Front/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy":"gh pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
@@ -18,6 +24,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "gh-pages": "^5.0.0",
     "vite": "^3.0.7"
   }
 }
